# MPC-TSS

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  flake.nix  mpc-dkg.wsd  server.py
dkg-c/: .gitignore  CMakeLists.txt  run.sh
dkg-c/libs/crypto/: rand.c
dkg-c/libs/crypto/random_gen/: crypto_random.h
dkg-c/src/: config.h  main.c  mpc.c  mpc.h  mpc_helpers.c  mpc_helpers.h  mpc_utils.c  mpc_utils.h  utils.c  utils.h
include/: bignum.h  bignum.h.gch  options.h  ot.h
server/: server.py
src/: bignum.c  config.h  main.c  mpc.c  mpc.h  mpc_helpers.c  mpc_helpers.h  mpc_utils.c  mpc_utils.h  names.h  network.c  network.h  ot.c
